# uv-workspace-demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.Server  Makefile  README.md  pyproject.toml
apps/dl-archiver/: pyproject.toml
apps/dl-archiver/src/dl_archiver/: __init__.py  __main__.py  config.py  models.py
apps/dl-efs-cleanup/: pyproject.toml
apps/dl-efs-cleanup/src/dl_efs_cleanup/: __init__.py  __main__.py
libs/core/: pyproject.toml
libs/core/src/core/: __init__.py  cloud_manager.py  database.py
libs/database/: pyproject.toml
