[project]
name = "uv-workspace-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.mypy]
# Platform and version settings
python_version = "3.13"
# Enable strict mode for production-level type checking
strict = true

# Additional strict settings for code quality
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Allow flexibility for modern Python features
allow_redefinition = false
allow_untyped_globals = false
allow_untyped_calls = false

# Error handling
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = false
namespace_packages = false


# Per-module options for specific cases
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_*",
]
disallow_untyped_defs = false
