[project]
name = "uv-workspace-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
]

[tool.mypy]
python_version = "3.13"
strict = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
allow_redefinition = false
allow_untyped_globals = false
allow_untyped_calls = false
implicit_reexport = false
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
error_summary = true
ignore_missing_imports = false
follow_imports = "normal"
follow_imports_for_stubs = false
namespace_packages = false

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_*",
]
disallow_untyped_defs = false
disallow_any_expr = false
