[project]
name = "dl-efs-cleanup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Christie", email = "david.christie@mediaradar.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dl-efs-cleanup = "dl_efs_cleanup:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
